提取sbox并从gpu取回图像

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,16 +6,22 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>463</width>
-    <height>322</height>
+    <width>300</width>
+    <height>300</height>
    </rect>
+  </property>
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+    <horstretch>0</horstretch>
+    <verstretch>0</verstretch>
+   </sizepolicy>
   </property>
   <property name="windowTitle">
    <string>Ver:test</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <property name="sizePolicy">
-    <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
+    <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
      <horstretch>0</horstretch>
      <verstretch>0</verstretch>
     </sizepolicy>
@@ -31,7 +37,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>463</width>
+     <width>300</width>
      <height>23</height>
     </rect>
    </property>
@@ -39,13 +45,13 @@
     <property name="title">
      <string>Start</string>
     </property>
-    <addaction name="actionOpen"/>
+    <addaction name="actionCapture"/>
    </widget>
    <addaction name="menuStart"/>
   </widget>
-  <action name="actionOpen">
+  <action name="actionCapture">
    <property name="text">
-    <string>Open</string>
+    <string>capture</string>
    </property>
   </action>
  </widget>
