--- a/res.qrc
+++ b/res.qrc
@@ -1,8 +1,9 @@
 <RCC>
     <qresource prefix="/">
-        <file>sbox.png</file>
         <file>raw.png</file>
         <file>glsl/vshader.vert</file>
         <file>glsl/fshader.frag</file>
+        <file>gen_sbox_image.py</file>
+        <file>key.png</file>
     </qresource>
 </RCC>
